Left align intro text on What We Do page. Fixes #539

--- a/src/app/components/what-we-do/_index.scss
+++ b/src/app/components/what-we-do/_index.scss
@@ -30,6 +30,6 @@
   }
 
   .single-column .content {
-    text-align: center;
+    text-align: left;
   }
 }
